--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,3 +1,3 @@
 Package: compendium
 Version: 0.1.2
-Depends: rmarkdown, tidyverse, sf, raster, tmap, terra
+Depends: rmarkdown, tidyverse, sf, raster, tmap, terra, rstac, stars
